jscomp/syntax/tests/parsing/errors/typeDef/namedParameters.res
type  draw = (stroke: pencil) => unit
